30/07/12 Julien Dutheil
* Migrated files from bpp-seq to bpp-seq-omics.


*** bpp-seq log copied here for information ***

18/07/12 Julien Dutheil
* Bug fixed in merge maf iterator, in case a sequence is missing in one of the two blocks.

25/06/12 Julien Dutheil
* Extended maf tools and reorganization of the code.
* Extended GFF output.
* New [] operator in SequenceFeatureSet.

18/06/12 Julien Dutheil
* Fixed bug in Maf parser: scores are now parsed correctly.

08/03/12 Julien Dutheil
* Added support for '*' character in proteins (stop codon)

09/02/12 -*- Version 2.0.3 -*-

16/01/12 Julien Dutheil
* Bug #42 solved, new support for extended fasta parser in application tools.
* Added contribution from Benoit Nabholz and Annabelle Haudry on 4-fold degenerated sites.

06/01/12 Julien Dutheil
* Added support for "!" state in nucleic alphabet, which can be either a gap or an unknown character.

24/11/11 Julien Dutheil
* Added SequenceWalker class and test.

22/11/11 Sylvain Gaillard
* Added support for FastQ

21/11/11 Julien Dutheil
* Added support for GFF3.

21/11/11 Sylvain Gaillard
* Bug #35 solved.

18/11/11 Julien Dutheil
* New MafIterators: SequenceStatistics and PairwiseSequenceStatistics.
* Function SequenceTools::getPercentIdentity now allows to exclude gaps.

15/09/11 Julien Dutheil
* Merge function of SequenceWithAnnotation now also merges annotations properly.

17/06/11 Julien Dutheil
* Bug #39 solved.

09/06/11 -*- Version 2.0.2 -*-

08/06/11 Julien Dutheil
* Fixed several Maf iterators.

28/02/11 -*- Version 2.0.1 -*-

* Fixed debian packaging. 

07/02/11 -*- Version 2.0.0 -*-

19/11/10 Julien Dutheil
* Solved bug 0000016 (General comments not copied in containers).
* A few more code cleaning.

01/11/10 Julien Dutheil
* Solved bug 0000005 (Clustal parser).
* Added unit testing for sequence input format.
* Solved bug 0000004 (Remove gap sites in SiteContainer).

12/10/10 Benoît Nabholz
* Added yeast mitochondrial codon alphabet and genetic code.
